# Patchouli-OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Patchouli/: CMakeLists.txt
Patchouli/include/: Patchouli.h  Patchoulipch.h
Patchouli/include/Core/: Application.h  Base.h  EntryPoint.h  EventQueue.h  Input.h  KeyCodes.h  Layer.h  Log.h  Timer.h  Timestep.h  Window.h
Patchouli/include/Debug/: Timer.h
Patchouli/include/Events/: ApplicationEvent.h  Event.h  EventQueue.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Patchouli/include/ImGui/: ImGuiLayer.h
Patchouli/include/Platform/OpenGL/: OpenGLContext.h  OpenGLIndexBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Patchouli/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Patchouli/include/Renderer/: GraphicsContext.h  IndexBuffer.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
Patchouli/lib/: Patchouli.lib
Patchouli/src/: Patchouli.cpp  Patchoulipch.cpp  Patchoulipch.h
Patchouli/src/Core/: Application.cpp  EventQueue.cpp  Layer.cpp  Log.cpp
Patchouli/src/Events/: EventQueue.cpp
Patchouli/src/ImGui/: ImGuiLayer.cpp
Patchouli/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLIndexBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Patchouli/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Patchouli/src/Renderer/: IndexBuffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Spell/: CMakeLists.txt
Spell/include/: Spell.h  Spell2D.h
Spell/src/: Spell.cpp  Spell2D.cpp  main.cpp
Util/: CMakeLists.txt
Util/include/: Identifier.h  ImmHash.h  ObjectPool.h  ResourcePtr.h
Util/src/: Identifier.cpp  None.cpp
Util/visuallizers/vs/: Identifier.natvis
assets/shaders/: flatColor.glsl  genericShader.glsl  shader.glsl  texture.glsl
cmakes/: Library.cmake
lib/: glfw3.lib
lib/farmhash/: CMakeLists.txt
lib/farmhash/include/: farmhash.h
lib/farmhash/src/: farmhash.cc
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imgui.vcxproj  premake5.lua
lib/imgui/backends/: imgui_impl_opengl3_loader.h
lib/imgui/bin-int/Debug-windows-x86_64/imgui/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
lib/imgui/bin-int/Release-windows-x86_64/imgui/imgui.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
lib/spdlog/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
lib/xxhash/: xxhash.h
